--- a/package.json
+++ b/package.json
@@ -7,19 +7,43 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ngcc"
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/datetime-picker": "^5.1.0",
+    "@angular-material-components/moment-adapter": "^5.0.0",
     "@angular/animations": "~11.2.4",
+    "@angular/cdk": "^11.2.4",
     "@angular/common": "~11.2.4",
     "@angular/compiler": "~11.2.4",
     "@angular/core": "~11.2.4",
     "@angular/forms": "~11.2.4",
+    "@angular/localize": "~11.2.4",
+    "@angular/material": "^11.2.4",
     "@angular/platform-browser": "~11.2.4",
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
+    "@fortawesome/angular-fontawesome": "^0.8.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "@types/jquery.ui.datetimepicker": "^0.3.29",
+    "angular2-datetimepicker": "^1.1.1",
+    "bootstrap": "^4.6.0",
+    "bootstrap-daterangepicker": "^3.1.0",
+    "bulma": "^0.9.2",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.6.0",
+    "jquery-datepicker": "^1.12.3",
+    "ngx-mat-datetime-picker": "^3.0.0",
+    "ngx-mat-moment-adapter": "^1.0.0-beta.1",
+    "ngx-swiper-wrapper": "^10.0.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
+    "save": "^2.4.0",
+    "swiper": "^6.5.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
@@ -28,6 +52,7 @@
     "@angular/cli": "~11.2.3",
     "@angular/compiler-cli": "~11.2.4",
     "@types/jasmine": "~3.6.0",
+    "@types/jquery": "^2.0.47",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
